# zk-credit-service

./: .gitignore  LICENSE  README.md
verifier-service/: Cargo.toml
verifier-service/src/: main.rs
zkp-service/: .gitignore  Cargo.toml  docker-compose.yml
zkp-service/zk_api/: Cargo.toml  Dockerfile
zkp-service/zk_api/src/: main.rs
zkp-service/zk_common/: Cargo.toml
zkp-service/zk_common/src/: lib.rs
zkp-service/zk_core/: Cargo.toml  Dockerfile
zkp-service/zk_core/src/: lib.rs  main.rs
