[package]
name = "zk_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bulletproofs = { version = "4.0.0", features = ["std"] }
curve25519-dalek-ng = "4.1.1"
merlin = "3.0.0"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25.3", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
zk_common = { path = "../zk_common" }